Fixed card title text alignment.

--- a/src/app/core/components/widgets/widgetnic/widgetnic.component.css
+++ b/src/app/core/components/widgets/widgetnic/widgetnic.component.css
@@ -38,6 +38,8 @@
   font-weight: 500;
   display:inline-block;
   vertical-align:middle;
+  position: relative;
+  top: 2px;
 }
 
 .carousel{
